--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     height: 100vh;
 }
 
@@ -37,11 +37,15 @@ html, body {
 .sidebar{
     display: grid;
     grid-template-rows: 10% repeat(10, 1fr) 30%;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 4fr;
 
     height: 100%;
-    gap: 1%;
+    gap: 2%;
 }
+
+
+
+
 
 /* header grid */
 
@@ -51,6 +55,13 @@ html, body {
     grid-template-columns: 60% repeat(3, 1fr);
     height: 100%;
 }
+
+.profile-corner {
+    grid-row: 1 / 2;
+    grid-column: 2 / -1;
+}
+
+
 
 
 /* main-content grid */
@@ -63,6 +74,7 @@ html, body {
     grid-template-rows: 1fr;
 }
 
+
 .projects-container{
     grid-column: 1 / 2;
 
@@ -72,11 +84,9 @@ html, body {
     grid-template-rows: 8% repeat(3, 1fr);
     grid-template-columns: repeat(2, 1fr);
 
-    gap: 3%;
 }
 
 .main-content-right-container {
-    border: 1px solid blue;
     grid-column: 2 / 3;
     
     display: grid;
@@ -84,8 +94,69 @@ html, body {
 
     grid-template-columns: 1fr;
     grid-template-rows: 8% 1fr 8% 1fr;
+
 }
 
 .section-header {
     grid-column: 1 / -1;
+}
+
+
+
+/* END OF GRIDS */
+
+/* now onto stylin */
+
+@font-face {
+    font-family: "myfont";
+    src: url("assets/fonts/Roboto/Roboto-Bold.ttf");
+}
+
+* {
+    font-family: "myfont";
+}
+
+.sidebar {
+    background-color: #1992d4;
+    color: white;
+    padding-left: 10px;
+}
+
+.sidebar-icon, .sidebar-link, .sidebar-title {
+    align-self: center;
+}
+
+.sidebar-icon {
+    justify-self: center;
+}
+
+.header {
+
+}
+
+.header-button {
+    color: white;
+    background-color: #1992d4;
+
+    height: max(40px, 60%);
+    width: min(100px, 80%);
+    margin: 5px;
+    justify-self: center;
+    align-self: center;
+
+    border: 0px;
+    border-radius: 9999px;
+
+
+    font-size: 16px;
+}
+
+
+
+.main-content {
+    background-color: #e2e8f0;
+}
+
+.project-item {
+
 }
