--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ html, body {
 :root {
     --content-padding: 20px;
     --content-item-padding: 10px;
+    --content-gap: 5px;
 }
 
 
@@ -91,22 +92,30 @@ html, body {
     grid-template-rows: 8% repeat(3, 1fr);
     grid-template-columns: repeat(2, 1fr);
 
-    gap: 5px;
+    gap: var(--content-gap);
     padding: var(--content-item-padding);
 
+}
+
+.project-item{
+    margin: 0px 20px 20px 0px;
+}
+
+.main-content-right-container > div {
+    margin-bottom: 20px;
 }
 
 .main-content-right-container {
     grid-column: 2 / 3;
     
     display: grid;
-    height: calc(100% - 10px);
+    height: calc(100% - var(--content-item-padding) * 2);
 
     grid-template-columns: 1fr;
     grid-template-rows: 8% 1fr 8% 1fr;
 
-    gap: 5px;
-    padding: 5px;
+    gap: var(--content-gap);
+    padding: var(--content-item-padding);
 }
 
 .section-header {
@@ -173,4 +182,10 @@ html, body {
 .announcements,
 .trending {
     background-color: white;
+    border-radius: 10px;
+    filter: drop-shadow(2px 2px 2px lightgray);
+}
+
+.project-item {
+    background: linear-gradient(to right, #f0b429 10px, white 0%, white 100%);
 }
